# prv-ble

./: CMakeLists.txt  README.md  gen_macros.py  pattern_schema.json  plug.json  program_schema.json
devices/: CMakeLists.txt  plug.json
lib/prv-ble-firmware/: gen_macros.py
lib/prv-ble-firmware/cmake/: gen_prv_UUIDs.cmake  prv-ble-config.cmake
lib/prv-ble-firmware/include/: prv_hardware_service.h
lib/prv-ble-firmware/src/: prv_hardware_service.c
services/: CMakeLists.txt  battery.json  battery.md  bond_management.json  bond_management.md  device_information.json  device_information.md  prv_hardware.json  prv_hardware.md  prv_pattern.json  prv_pattern.md  prv_pattern_management.json  prv_pattern_management.md  prv_program.json  prv_program.md
share/prv-ble-package/cmake/: gen_prv_UUIDs.cmake  prv-ble-config.cmake
